--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Necromante</title>
   </head>
-  <body class="bg-gray-100">
+  <body
+    class="bg-gray-100 bg-gradient-to-b from-purple-800 to-gray-900 min-h-screen"
+  >
     <div id="root"></div>
     <script type="module" src="/src/client/main.tsx"></script>
   </body>
